--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -9,8 +9,12 @@
 	<body>
 		<% include "navbar.html" %>
 		<div id="body_content">
-			<h2>Rooms</h2>
-			<a href="/manage_rooms">Create a new room or manage existing rooms.</a>
+			<div class="row">
+				<h2>Rooms</h2>
+			</div>
+			<div class="row centered">
+				<a href="/manage_rooms">Create a new room or manage existing rooms.</a>
+			</div>
 			<div id="rooms_list">
 				<% for room in @room_list : %>
 					<div class="room" data_room_id="<%- room.id %>">
