--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -12,14 +12,18 @@
 	<body>
 		<% include "navbar_signin.html" %>
 		<div id="body_content">
-			<h2>Welcome to Crisis Flow!</h2>
-			<div id="signup_wrapper">
+			<div class="row width60">
+				<h2>Welcome to Crisis Flow!</h2>
+			</div>
+			<div id="signup_wrapper"  class="row signup_width">
 				<form id="signup_form" class="form-inline">
 					<input id="username" class="form-control" type="text" placeholder="Username"/>
 					<input id="password" class="form-control" type="password" placeholder="Password"/>
 					<input id="access_code" class="form-control" type="text" placeholder="Access code"/>
 					<button id="submit_signup" class="btn btn-primary" type="submit">Sign up</button>
 				</form>
+			</div>
+			<div class="row signup_width">
 				<p>Already have an account? <a href="/signin">Sign in here</a>.</p>
 			</div>
 		</div>
