Fixed reply-to author name bug and bug where newly joined members didn't show up in the members list

--- a/client/css/add_task.css
+++ b/client/css/add_task.css
@@ -17,6 +17,10 @@
 	color: #141313;
 }
 
+.select2-selection__choice {
+	color: #141313;
+}
+
 #task_title {
 	max-width: 500px;
 	display: inline-block;
