--- a/client/templates/add_task.html
+++ b/client/templates/add_task.html
@@ -30,6 +30,7 @@
 						<p>Add relevant tags to this directive:</p>
 						<select id="task_tags" class="form-control" multiple="multiple" name="tags" form="add_task_form">
 							<% for tag in @tags : %>
+								<option value=""></option>
 								<option value="<%- tag.id %>"><%= tag.name %></option>
 							<% end %>
 						</select>
