--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -20,7 +20,7 @@
 					<input id="username" class="form-control" type="text" placeholder="Username"/>
 					<input id="password" class="form-control" type="password" placeholder="Password"/>
 					<input id="access_code" class="form-control" type="text" placeholder="Access code"/>
-					<button id="submit_signup" class="btn btn-primary" type="submit">Sign up</button>
+					<button id="submit_signup" class="btn btn-themed" type="submit">Sign up</button>
 				</form>
 			</div>
 			<div class="row signup_width">
