--- a/client/templates/signin.html
+++ b/client/templates/signin.html
@@ -19,7 +19,7 @@
 				<form id="signin_form" class="form-inline">
 					<input id="username" class="form-control" type="text" placeholder="Username"/>
 					<input id="password" class="form-control" type="password" placeholder="Password"/>
-					<button id="submit_signin" class="btn btn-primary" type="submit">Sign in</button>
+					<button id="submit_signin" class="btn btn-themed" type="submit">Sign in</button>
 				</form>
 			</div>
 			<div class="row signin_width">
