--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -7,6 +7,6 @@
 				<li id="signout_menu" class="menu_item"><a href="/signout">Sign out</a></li>
 			</ul>
 		</div>
-		<p id="nav_greeting" class="menu_item navbar-text navbar-right">Hi there, <%- @username %>!</p>
+		<p id="nav_greeting" class="menu_item navbar-text navbar-right">Hi there, <%- @display_name %>!</p>
 	</div>
 </nav>
