--- a/client/templates/message_archive.html
+++ b/client/templates/message_archive.html
@@ -25,8 +25,8 @@
 				<div id="messages">
 					<div ng-repeat="message in messages | orderBy:'time':false track by message.id" id="message_{{ message.id }}"
 					class="message" data-toggle="tooltip" data-placement="left" data-message-time="{{ message.time }}">
-						<a class="reply_forward_link bold" ng-click="initReply(message.id)">{{ message.author }}:</a>
-						<p class="reply_backward_link" ng-show="message.reply >= 0">(<a ng-click="jumpToReplyTarget(message.reply)" class="italic">reply to {{ message.author }}</a>)</p>
+						<a class="reply_forward_link bold">{{ message.authorDisplayName }}:</a>
+						<p class="reply_backward_link" ng-show="message.reply >= 0">(<a ng-click="jumpToReplyTarget(message.reply)" class="italic">reply to {{ getReplyTargetAuthorDisplayName(message.reply) }}</a>)</p>
 						<p>{{ message.content }}</p>
 					</div>
 				</div>
