--- a/client/templates/signin.html
+++ b/client/templates/signin.html
@@ -15,14 +15,16 @@
 			<div class="row width60">
 				<h2>Welcome to Crisis Flow!</h2>
 			</div>
-			<div id="signin_wrapper" class="row signin_width">
+			<div id="signin_wrapper" class="text_centered">
 				<form id="signin_form" class="form-inline">
-					<input id="username" class="form-control" type="text" placeholder="Username"/>
-					<input id="password" class="form-control" type="password" placeholder="Password"/>
-					<button id="submit_signin" class="btn btn-themed" type="submit">Sign in</button>
+					<div class="row shrink_to_content">
+						<input id="username" class="form-control" type="text" placeholder="Username"/>
+						<input id="password" class="form-control" type="password" placeholder="Password"/>
+						<button id="submit_signin" class="btn btn-themed" type="submit">Sign in</button>
+					</div>
 				</form>
 			</div>
-			<div class="row signin_width">
+			<div class="row text_centered">
 				<p>Don't have an account? <a href="/signup">Sign up here</a>.</p>
 			</div>
 		</div>
