--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -15,15 +15,21 @@
 			<div class="row width60">
 				<h2>Welcome to Crisis Flow!</h2>
 			</div>
-			<div id="signup_wrapper"  class="row signup_width">
+			<div id="signup_wrapper" class="text_centered">
 				<form id="signup_form" class="form-inline">
-					<input id="username" class="form-control" type="text" placeholder="Username"/>
-					<input id="password" class="form-control" type="password" placeholder="Password"/>
-					<input id="access_code" class="form-control" type="text" placeholder="Access code"/>
-					<button id="submit_signup" class="btn btn-themed" type="submit">Sign up</button>
+					<div id="form_top_row" class="row shrink_to_content">
+						<input id="username" class="form-control" type="text" placeholder="Username"/>
+						<input id="password" class="form-control" type="password" placeholder="Password"/>
+						<input id="access_code" class="form-control" type="text" placeholder="Access code"/>
+					</div>
+					<br/>
+					<div id="form_bottom_row" class="row shrink_to_content">
+						<input id="display_name" class="form-control" type="text" placeholder="Display name (how you will appear to others)"/>
+						<button id="submit_signup" class="btn btn-themed" type="submit">Sign up</button>
+					</div>
 				</form>
 			</div>
-			<div class="row signup_width">
+			<div class="row text_centered">
 				<p>Already have an account? <a href="/signin">Sign in here</a>.</p>
 			</div>
 		</div>
