--- a/client/templates/manage_rooms.html
+++ b/client/templates/manage_rooms.html
@@ -33,7 +33,7 @@
 						class="delete_room btn btn-danger" data-toggle="modal" data-target="#delete_room_dialog">
 							Delete
 						</button>
-						<button class="expand_channels btn btn-info">Edit Channels</button>
+						<!-- <button class="expand_channels btn btn-info">Edit Channels</button> -->
 						<div class="channels_list" style="display: none;">
 							<% for channel in room.channels : %>
 								<div class="channel">
