--- a/client/templates/signin.html
+++ b/client/templates/signin.html
@@ -15,7 +15,7 @@
 			<div class="row width60">
 				<h2>Welcome to Crisis Flow!</h2>
 			</div>
-			<div id="signin_wrapper" class="text_centered">
+			<div id="signin_wrapper" class="centered">
 				<form id="signin_form" class="form-inline">
 					<div class="row shrink_to_content">
 						<input id="username" class="form-control" type="text" placeholder="Username"/>
@@ -24,7 +24,7 @@
 					</div>
 				</form>
 			</div>
-			<div class="row text_centered">
+			<div class="row centered">
 				<p>Don't have an account? <a href="/signup">Sign up here</a>.</p>
 			</div>
 		</div>
