--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -15,7 +15,7 @@
 			<div class="row width60">
 				<h2>Welcome to Crisis Flow!</h2>
 			</div>
-			<div id="signup_wrapper" class="text_centered">
+			<div id="signup_wrapper" class="centered">
 				<form id="signup_form" class="form-inline">
 					<div id="form_top_row" class="row shrink_to_content">
 						<input id="username" class="form-control" type="text" placeholder="Username"/>
@@ -29,7 +29,7 @@
 					</div>
 				</form>
 			</div>
-			<div class="row text_centered">
+			<div class="row centered">
 				<p>Already have an account? <a href="/signin">Sign in here</a>.</p>
 			</div>
 		</div>
