--- a/client/templates/add_task.html
+++ b/client/templates/add_task.html
@@ -17,15 +17,15 @@
 				<h2>Add task</h2>
 			</div>
 			<form id="add_task_form"  class="centered form" action="/add_task/<%- @room_id %>" method="post" enctype="multipart/form-data">
-				<div class="row shrink_to_content width-50">
+				<div class="row shrink_to_content form-width">
 					<input id="task_title" name="title" type="text" form="add_task_form" class="form-control" placeholder="Title"/>
 					<button id="high_priority_button" type="button" class="btn btn-default" data-high-priority="false">Mark as high priority</button>
 					<input id="high_priority_input" name="high_priority" form="add_task_form" value="false" type="hidden"/>
 				</div>
-				<div class="row centered width-50">
+				<div class="row centered form-width">
 					<textarea id="task_content" name="content" form="add_task_form" class="form-control" placeholder="Enter the contents of the directive here..."></textarea>
 				</div>
-				<div class="row width-50">
+				<div class="row form-width">
 					<div id="form_tagging">
 						<p>Add tags which describe this task:</p>
 						<select id="task_tags" class="form-control" multiple="multiple" name="tags" form="add_task_form">
