--- a/client/css/add_task.css
+++ b/client/css/add_task.css
@@ -5,6 +5,10 @@
 	max-width: 300px;
 }
 
+.select2 {
+	text-align: left;
+}
+
 .select2-container--default .select2-selection--multiple {
 	background-color: #E3E3E3 !important;
 }
@@ -19,10 +23,6 @@
 
 .select2-selection__choice {
 	color: #141313;
-}
-
-.width-50 {
-	width: 50%;
 }
 
 #task_title {
