Added archive tab to tasks pane

--- a/client/templates/room.html
+++ b/client/templates/room.html
@@ -80,6 +80,7 @@
 			<div id="task_content">
 				<button id="crisis_tasks" class="btn btn-task-tab tab-selected" ng-click="displayCrisisTasks()">Crisis Tasks</button>
 				<button id="committee_tasks" class="btn btn-task-tab" ng-click="displayCommitteeTasks()">Committee Tasks</button>
+				<button id="archived_tasks" class="btn btn-task-tab" ng-click="displayArchivedTasks()">Archived Tasks</button>
 				<div id="tasks">
 					<div id="task_wrapper">
 						<!-- task entry in task queue -->
