Changed audio notifications to default to off

--- a/client/templates/room.html
+++ b/client/templates/room.html
@@ -118,7 +118,7 @@
 					placeholder="Hi, {{ displayName }}! Say something…">
 					</textarea>
 					<button id="send_message" class="btn btn-themed" type="submit">Send</button>
-					<div id="audio_icon" ng-click="toggleAudio()" class="glyphicon glyphicon-volume-up"></div>
+					<div id="audio_icon" ng-click="toggleAudio()" class="glyphicon glyphicon-volume-off"></div>
 				</form>
 			</div>
 		</div>
