Allow entire task panel to be clicked rather than just title

--- a/client/css/base.css
+++ b/client/css/base.css
@@ -34,6 +34,10 @@ p {
 	font-style: italic;
 }
 
+.cursor-pointer {
+	cursor: pointer;
+}
+
 a.btn {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
