--- a/client/templates/500.html
+++ b/client/templates/500.html
@@ -13,7 +13,7 @@
 			</div>
 			<div class="row centered">
 				<p>500 - that's an error!</p>
-				<p>This is my fault. Please let <a href="mailto:decorum@browncrisis.org">Ian</a> know what happened.</p>
+				<p>This is my fault. Please let <a href="mailto:technology@browncrisis.org">Ian</a> know what happened.</p>
 			</div>
 		</div>
 	</body>
