--- a/client/templates/room.html
+++ b/client/templates/room.html
@@ -8,10 +8,10 @@
 		<script type="text/javascript" src="/js/room.js" charset="utf-8"></script>
 		<link rel="stylesheet" type="text/css" href="/css/room.css"></link>
 		<title id="page_title"><%= @room.name %> | Crisis Flow</title>
-		
+
 		<meta name="room_id" content="<%- @room.id %>"/>
 		<meta name="username" content="<%- @username %>"/>
-		
+
 		<script src="/socket.io/socket.io.js"></script>
 		<script type="text/javascript">
 			var socket = io.connect();
@@ -21,56 +21,7 @@
 		<audio id="message_audio" src="/audio/message_notification.mp3" type="hidden"></audio>
 		<audio id="task_audio" src="/audio/task_notification.ogg" type="hidden"></audio>
 		<div id="task_detail_modals" ng-repeat="task in tasks track by task.id">
-			<!-- modal dialog containing task details (starts hidden) -->
-			<div id="task_detail_{{ task.id }}" class="task_detail modal fade" role="dialog" aria-hidden="true">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h3 class="modal-title">{{ task.title }}</h3>
-							<span ng-show="task.high_priority" class="glyphicon glyphicon-exclamation-sign"></span>
-							<h4 ng-show="task.high_priority" class="task_detail_priority">High Priority</h4>
-							<div ng-show="task.tags.length" class="task_detail_tags_list">
-								<span>Tags:</span>
-								<ul class="task_tags">
-										<li ng-repeat="tag in task.tags track by tag.id" class="task_tag">{{ tag.name }}</li>
-								</ul>
-							</div>
-							<p class="task_detail_profile">Submitted by {{ task.authorDisplayName }} (<span class="task_time">{{ formatTaskTime(task.id) }}</span>)</p>
-						</div>
-						<div class="modal-body">
-							<div class="task_content">
-								<h5 class="modal-heading">Task:</h5>
-								<p>{{ task.content }}</p>
-							</div>
-							<div class="task_followups">
-								<div class="task_followup" ng-repeat="followup in task.followups | orderBy:'time':false track by followup.id">
-									<h5 class="modal-heading">Followup:</h5>
-									<p>{{ followup.content }}</p>
-								</div>
-								<textarea class="followup-entry form-control" ng-model="task.followupContent"></textarea>
-								<button class="btn btn-primary" ng-click="addTaskFollowup(task.id)">Add followup</button>
-							</div>
-						</div>
-						<div class="modal-footer">
-							<div ng-show="task.attachments.length" class="task_attachments">
-								<h5>Attachments</h5>
-								<a ng-repeat="attachment in task.attachments" class="attachment_link" 
-								ng-href="<%- @upload_path %>{{ attachment.internal_filename }}">{{ attachment.user_filename }}</a>
-							</div>
-							<button ng-click="retreatTaskStatus(task.id)" ng-show="task.status > 0" type="button" class="task_status_retreat btn btn-default">
-								<span class="left_arrow">&#10152;</span>
-								<span>Revert to {{ statusStrings[task.status - 1] }}</span>
-							</button>
-							<button ng-click="advanceTaskStatus(task.id)" ng-show="task.status < 3" type="button" class="task_status_advance btn btn-primary">
-								<span>Mark as {{ statusStrings[task.status + 1] }}</span>
-								<span>&#10152;</span>
-							</button>
-							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>
+			<% include "task_detail.html" %>
 		</div>
 		<% include "navbar.html" %>
 		<div id="body_content">
@@ -84,22 +35,9 @@
 				<div id="tasks">
 					<div id="task_wrapper">
 						<!-- task entry in task queue -->
-						<div ng-repeat="task in tasks | orderBy:'time':true track by task.id" ng-if="task.status >= minimumTaskStatus && task.status <= maximumTaskStatus" id="task_{{ task.id }}" 
+						<div ng-repeat="task in tasks | orderBy:'time':true track by task.id" ng-if="task.status >= minimumTaskStatus && task.status <= maximumTaskStatus" id="task_{{ task.id }}"
 						class="task" data-toggle="tooltip" data-placement="right" data-task-time="{{ task.time }}">
-							<div class="cursor-pointer" data-toggle="modal" data-target="#task_detail_{{ task.id }}">
-								<span ng-show="task.high_priority" class="glyphicon glyphicon-exclamation-sign"></span>
-								<span class="task_title bold">{{ task.title }}</span>
-								<div class="task_summary">
-									<span class="task_author">From: {{ task.authorDisplayName }}</span>
-									<span class="task_status">Status: {{ statusStrings[task.status] }}</span>
-								</div>
-								<div ng-show="task.tags.length" class="task_preview_tags_list">
-									<span>Tags:</span>
-									<ul class="task_tags">
-										<li ng-repeat="tag in task.tags track by tag.id" class="task_tag">{{ tag.name }}</li>
-									</ul>
-								</div>
-							</div>
+							<% include "task_preview.html" %>
 						</div>
 					</div>
 				</div>
@@ -115,8 +53,8 @@
 					</div>
 				</div>
 				<form id="add_message_form" class="form-inline" ng-submit="addMessage()">
-					<textarea id="input_message" class="form-control" ng-model="inputMessage" 
-					ng-keypress="enterInputMessage($event)" autofocus="true" data-toggle="popover" 
+					<textarea id="input_message" class="form-control" ng-model="inputMessage"
+					ng-keypress="enterInputMessage($event)" autofocus="true" data-toggle="popover"
 					placeholder="Hi, {{ displayName }}! Say something…">
 					</textarea>
 					<button id="send_message" class="btn btn-themed" type="submit">Send</button>
