--- a/client/templates/signin.html
+++ b/client/templates/signin.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<% include "common_includes.html" %>
-		<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha256.js"></script>
+ 		<% include "common_includes.html" %>
+		<script src="/js/sha256.js"></script>
 		<script type="text/javascript" src="/js/signin.js" charset="utf-8"></script>
 		<link rel="stylesheet" type="text/css" href="/css/signin.css"></link>
 		<title id="page_title">Sign-in | Crisis Flow</title>
-		
+
 		<meta name="server_salt" content="<%- @server_salt %>"/>
 	</head>
 	<body>
