--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<% include "common_includes.html" %>
-		<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha256.js"></script>
+		<script src="/js/sha256.js"></script>
 		<script type="text/javascript" src="/js/signup.js" charset="utf-8"></script>
 		<link rel="stylesheet" type="text/css" href="/css/signin.css"></link>
 		<title id="page_title">Sign-up | Crisis Flow</title>
-		
+
 		<meta name="server_salt" content="<%- @server_salt %>"/>
 	</head>
 	<body>
